--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-	compileSdkVersion 25
-	buildToolsVersion "25.0.1"
+	compileSdkVersion 28
+	buildToolsVersion "28.0.3"
 
 	defaultConfig {
 		applicationId "org.zakariya.stickyheadersapp"
 		minSdkVersion 19
-		targetSdkVersion 25
+		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
 	}
@@ -20,12 +20,12 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
-	testCompile 'junit:junit:4.12'
-	compile 'com.android.support:appcompat-v7:25.0.1'
-	compile 'com.android.support:design:25.0.1'
-	compile 'com.android.support:recyclerview-v7:25.0.1'
-	compile 'com.squareup.retrofit2:retrofit:2.0.2'
-	compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-	compile project(path: ':stickyheaders')
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
+	testImplementation 'junit:junit:4.12'
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	implementation 'com.android.support:design:28.0.0'
+	implementation 'com.android.support:recyclerview-v7:28.0.0'
+	implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+	implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+	implementation project(path: ':stickyheaders')
 }
